--- a/sleeptime.css
+++ b/sleeptime.css
@@ -139,7 +139,7 @@
 {
   font-family: var(--font-poppins-regular);
   font-size: 18px;
-  font-weight: 600;
-  color: #fff;
+  font-weight: 500;
+  color: #000000;
   margin-bottom: 6vh;
 }
