changing color in add nutrtion panel for consistency

--- a/nutrition.css
+++ b/nutrition.css
@@ -100,7 +100,7 @@ input[type="text"]::placeholder {
   top: 100px;
   margin: auto;
 
-  background: #a8e6cf;
+  background: #C3E4CF;
 }
 
 .food-header {
