--- a/collab/collaborator.css
+++ b/collab/collaborator.css
@@ -58,6 +58,10 @@ img{
     border: none;
     border-radius: 5px;
     transition: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
 }
 
 #add-button:hover{
@@ -110,4 +114,46 @@ img{
 
 .remove-collaborator .material-symbols-outlined{
     color: rgb(238, 65, 65);
+}
+
+#collab-overlay{
+    width:fit-content;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#add-collab-overlay{
+    background-color: var(--darker-mint);
+    position: relative;
+    width:fit-content;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+#add-collab-overlay input{
+    width: 40rem;
+}
+
+#add-collab-overlay p{
+    font-size: 1rem;
+}
+
+.overlay-open{
+    display: flex !important;
+}
+
+#close-overlay{
+    position: absolute;
+    right: 1rem;
+    cursor: pointer;
 }
