--- a/collab/collaborator.css
+++ b/collab/collaborator.css
@@ -15,9 +15,18 @@ img{
     border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 }
 
-#select-collab-type .selected p{
+#select-collab-type ul{
+    display: flex;
+    gap: 2rem;
+}
+
+#select-collab-type ul li{
+    cursor: pointer;
+}
+
+#select-collab-type .selected{
     color: var(--dark-green);
-    font-weight: 500;
+    font-weight: 800;
 }
 
 .collab-option p{
@@ -28,7 +37,7 @@ img{
     box-sizing: border-box;
     padding: 2rem clamp(3rem, 20vw, 25rem);
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 1rem;
 }
@@ -156,4 +165,16 @@ img{
     position: absolute;
     right: 1rem;
     cursor: pointer;
+}
+
+#shared-with-me{
+    display: none;
+}
+
+.onScreen{
+    display: flex !important;
+}
+
+.onScreen2{
+    display: inline !important;
 }
