--- a/nutrition.css
+++ b/nutrition.css
@@ -5,12 +5,14 @@
   display: flex;
 }
 
-.main-page-contaner {
+.main-page-contaner
+{
   display: flex;
   flex-direction: row;
 }
 
-.search-container {
+.search-container
+{
   width: 100%;
 }
 
@@ -21,7 +23,7 @@
   text-align: center;
   width: 38px;
   height: 38px;
-  background-color: rgb(38, 93, 62);
+  background-color: #40d0a7;
   border-radius: 10px;
 }
 
@@ -60,7 +62,7 @@ input[type="text"]::placeholder {
   display: flex;
   align-items: center;
   gap: 12px;
-  background-color: rgb(38, 93, 62);
+  background-color: rgba(195, 228, 207);
   padding: 10px 15px;
   border-radius: 15px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
@@ -86,7 +88,7 @@ input[type="text"]::placeholder {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
-  color: black;
+  color: #333;
 }
 
 /* bagian kanan */
@@ -98,8 +100,7 @@ input[type="text"]::placeholder {
   top: 100px;
   margin: auto;
   border-radius: 15px;
-
-  background: rgb(38, 93, 62);
+  background: #C3E4CF;
 }
 
 .food-header {
@@ -153,7 +154,7 @@ input[type="text"]::placeholder {
 }
 
 .nutrition-information {
-  background-color: rgb(22, 134, 72);
+  background-color: rgb(64, 208, 167);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -183,7 +184,7 @@ input[type="text"]::placeholder {
 }
 
 .time {
-  background-color: rgb(22, 134, 72);
+  background-color: rgb(64, 208, 167);
   border-radius: 10px;
   display: flex;
   gap: 1rem;
@@ -237,13 +238,13 @@ input[type="number"]::-webkit-outer-spin-button {
 
 #meridiem:hover,
 #meridiem:focus {
-  background-color: rgb(22, 134, 72);
+  background-color: rgb(195, 228, 207);
   color: black;
   outline: none;
 }
 
 .serving-size {
-  background-color: rgb(22, 134, 72);
+  background-color: rgb(64, 208, 167);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -261,7 +262,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .note {
-  background-color: rgb(22, 134, 72);
+  background-color: rgb(64, 208, 167);
   margin-top: 1rem;
   margin-left: 6%;
   margin-right: 55px;
@@ -291,6 +292,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-top: -10px;
 }
 
+
 #note::placeholder {
   font-family: poppins, sans-serif;
 }
@@ -302,7 +304,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-left: 40%;
   border-radius: 10px;
   border: none;
-  background-color: rgb(22, 134, 72);
+  background-color: #40d0a7;
 }
 
 #confirm-button-text {
