--- a/collab/collab.css
+++ b/collab/collab.css
@@ -35,12 +35,17 @@ body, html{
     flex: 2;
 }
 
-#manage{
+.manage{
     width: fit-content;
     border: none;
     background-color: var(--darker-mint);
     border-radius: 5px;
     font-weight: 400;
+}
+
+.manage:hover{
+    background-color: #61a18a;
+    cursor: pointer;
 }
 
 
@@ -133,9 +138,6 @@ body, html{
     flex: 1;
 }
 
-.collab-button:hover{
-    box-shadow: 0px 2px black;
-}
 
 .collab-button p{
     font-size: 1rem;
@@ -147,13 +149,25 @@ body, html{
     background-color: var(--orange);
 }
 
+.nutrition:hover{
+    box-shadow: 0px 2px rgba(255, 127, 80, 0.4);
+}
+
 .sleep{
     background-color: var(--blue);
+}
+
+.sleep:hover{
+    box-shadow: 0px 2px rgba(113, 147, 211, 0.4);
 }
 
 .qlog{
     background-color: #72BA9F;
     color: #ffffff;
+}
+
+.qlog:hover{
+    box-shadow: 0px 2px rgba(114, 186, 159, 0.4);
 }
 
 .qlog span{
